💄 Prevent close button overlap on mobile

--- a/components/Alert/Alert.module.css
+++ b/components/Alert/Alert.module.css
@@ -2,7 +2,7 @@
     position: fixed;
     top: 0;
     width: 100vw;
-    padding: 1rem;
+    padding: 1rem 2rem;
     align-items: center;
     justify-content: center;
     font-size: 1rem;
